crates/flight-rules/tests/snapshots/depth_tests__depth_snapshots__snapshot_depth_comparison_rule.snap
---
source: crates/flight-rules/tests/depth_tests.rs
expression: snap
---
instructions:
  - LoadVar: 0
  - LoadConst: 35000
  - Compare: Greater
  - JumpFalse: 5
  - Action: 0
variable_map:
  altitude: 0
actions:
  - LedBlink:
      target: ALT
      rate_hz: 2
stack_size: 8
