crates/flight-rules/tests/snapshots/depth_tests__depth_snapshots__snapshot_depth_error_bad_action.snap
---
source: crates/flight-rules/tests/depth_tests.rs
expression: e.to_string()
---
Validation error: Unsupported action syntax: set_led foo bar
