crates/flight-rules/tests/snapshots/depth_tests__depth_snapshots__snapshot_depth_multi_rule_program.snap
---
source: crates/flight-rules/tests/depth_tests.rs
expression: snap
---
instructions:
  - LoadVar: 0
  - LoadConst: 0
  - Compare: NotEqual
  - JumpFalse: 5
  - Action: 0
  - LoadVar: 0
  - LoadConst: 0
  - Compare: NotEqual
  - Not
  - JumpFalse: 11
  - Action: 1
  - LoadVar: 1
  - LoadConst: 250
  - Compare: Greater
  - JumpFalse: 16
  - Action: 2
variable_map:
  gear_down: 0
  ias: 1
actions:
  - LedOn:
      target: GEAR
  - LedOff:
      target: GEAR
  - LedBlink:
      target: OVERSPEED
      rate_hz: 4
stack_size: 8
